
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="kappacode.kronos.fragments.MyDay">

        <Button
            android:id="@+id/button_adicionar_atividdade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/button_adicionar_atividade"
            android:textColor="@color/button_add_activity"
            style="?android:attr/borderlessButtonStyle"/>

        <ListView
            android:id="@+id/listView_atividades"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/button_adicionar_atividdade"
            android:descendantFocusability="beforeDescendants" />

</RelativeLayout>